--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--<div class="site-slogan">Cherie Berry</div>
     -->
     </div>
-    <div id="site-slogan">"I'm the elevator lady, and I love keeping your wages in the basement!"</div>
+    <div class="site-slogan">"I'm the elevator lady, and I love keeping your wages in the basement!"</div>
     
     <!--<h1>Hello Plunker!</h1>-->
     <h2>Who is the Real Cherie Berry?</h2>
