--- a/index.html
+++ b/index.html
@@ -57,8 +57,12 @@
    <p>Email her at <a href="mailto:commishberry@aol.com">commishberry@aol.com</a> or call her at 828-217-5638.</p>
    
    <h2>Tell Your Friends: Cherie #FAILS NC Workers</h2>
+  <div class="cbmeme" id="minimumwage">
    <a href="#"><img src="#"></a>
+    </div>
+  <div class="cbmeme" id="cheatworkers">
    <a href="#"><img src="#"></a>
+    </div>
    
    <h3>Disclaimer</h3>
    <p>This site is not affiliated with the campaigns of Cherie Berry or Charles Meeker or any other organzation.</p>
