--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
    
    <h2>Tell Your Friends: Cherie #FAILS NC Workers</h2>
   <div class="cbmeme" id="minimumwage">
-   <a href="#"><img src="#"></a>
+   <a href="https://imgflip.com/i/1bznz3"><img src="https://i.imgflip.com/1bznz3.jpg" title="Cherie Berry Wants to Abolish Minimum Wage"/></a>
     </div>
   <div class="cbmeme" id="cheatworkers">
-   <a href="#"><img src="#"></a>
+   <a href="https://imgflip.com/i/1bzoja"><img src="https://i.imgflip.com/1bzoja.jpg" title="Cherie Berry Won't Help Cheated Workers"/></a>
     </div>
    
    <h3>Disclaimer</h3>
