--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
    <p>Email her at <a href="mailto:commishberry@aol.com">commishberry@aol.com</a> or call her at 828-217-5638.</p>
    
    <h2>Tell Your Friends: Cherie #FAILS NC Workers</h2>
-  <div align="center">
+  <div align="center" border="2px black">
   <div class="cbmeme" id="minimumwage">
-   <a href="https://imgflip.com/i/1bznz3"><img src="https://i.imgflip.com/1bznz3.jpg" title="Cherie Berry Wants to Abolish Minimum Wage"/></a>
+   <a href="https://imgflip.com/i/1bznz3"><img class="cbmeme" id="minimumwage" src="https://i.imgflip.com/1bznz3.jpg" title="Cherie Berry Wants to Abolish Minimum Wage"/></a>
     </div>
   <div class="cbmeme" id="cheatworkers">
    <a href="https://imgflip.com/i/1bzoja"><img src="https://i.imgflip.com/1bzoja.jpg" title="Cherie Berry Won't Help Cheated Workers"/></a>
