--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
    <a href="https://imgflip.com/i/1bznz3"><img class="cbmeme" id="minimumwage" src="https://i.imgflip.com/1bznz3.jpg" title="Cherie Berry Wants to Abolish Minimum Wage"/></a>
     </div>
   <div class="cbmeme" id="cheatworkers">
-   <a href="https://imgflip.com/i/1bzoja"><img src="https://i.imgflip.com/1bzoja.jpg" title="Cherie Berry Won't Help Cheated Workers"/></a>
+   <a href="https://imgflip.com/i/1bzoja"><img class="cbmeme" id="cheatworkers" src="https://i.imgflip.com/1bzoja.jpg" title="Cherie Berry Won't Help Cheated Workers"/></a>
     </div>
   </div>
       
