--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
   <head>
     <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    
     <!--<script src="script.js"></script>-->
   </head>
 
