--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
   <div align="center" border="2px black">
   <div class="cbmeme" id="minimumwage">
    <a href="https://imgflip.com/i/1bznz3"><img class="cbmeme" id="minimumwage" src="https://i.imgflip.com/1bznz3.jpg" title="Cherie Berry Wants to Abolish Minimum Wage"/></a>
-    <a class="btn btn-sm share-twitter" target="_blank" href="http://twitter.com/home?status=http%3A//www.cherieberry.info/%20Cherie%20Berry%20Wants%20to%20Abolish%20the%20Minimum%20Wage.%20Learn%20More:%21">Share on Twitter</a>
-<a class="btn btn-sm share-facebook" target="_blank" href="http://facebook.com/sharer.php?u=http://www.cherieberry.info/&amp;t=Cherie%20Berry%20Wants%20to%20Abolish%20the%20Minimum%20Wage.%20Learn%20More:%21">Share on Facebook</a>
+    <a class="btn btn-sm share-twitter" target="_blank" href="http://twitter.com/home?status=https%3A//i.imgflip.com/1bznz3.jpg%20Cherie%20Berry%20Wants%20to%20Abolish%20the%20Minimum%20Wage.%20Learn%20More:%21">Share on Twitter</a>
+<a class="btn btn-sm share-facebook" target="_blank" href="http://facebook.com/sharer.php?u=https://i.imgflip.com/1bznz3.jpg&amp;t=Cherie%20Berry%20Wants%20to%20Abolish%20the%20Minimum%20Wage.%20Learn%20More:%21">Share on Facebook</a>
     </div>
   <div class="cbmeme" id="cheatworkers">
    <a href="https://imgflip.com/i/1bzoja"><img class="cbmeme" id="cheatworkers" src="https://i.imgflip.com/1bzoja.jpg" title="Cherie Berry Won't Help Cheated Workers"/></a>
