--- a/index.html
+++ b/index.html
@@ -58,16 +58,18 @@
    <h2>Tell Cherie Berry That North Carolina Workers Matter</h2>
    <p>Email her at <a href="mailto:commishberry@aol.com">commishberry@aol.com</a> or call her at 828-217-5638.</p>
    
-   <h2>Tell Your Friends: Cherie #FAILS NC Workers</h2>
+   <h2>Share With Your Friends: Cherie #FAILS NC Workers</h2>
   <div align="center" border="2px black">
   <div class="cbmeme" id="minimumwage">
    <a href="https://imgflip.com/i/1bznz3"><img class="cbmeme" id="minimumwage" src="https://i.imgflip.com/1bznz3.jpg" title="Cherie Berry Wants to Abolish Minimum Wage"/></a>
-    <a class="btn btn-sm share-twitter" target="_blank" href="http://twitter.com/home?status=https%3A//i.imgflip.com/1bznz3.jpg%20Cherie%20Berry%20Wants%20to%20Abolish%20the%20Minimum%20Wage.%20Learn%20more%20at%20cherieberry.info">Share on Twitter</a>
-<a class="btn btn-sm share-facebook" target="_blank" href="http://facebook.com/sharer.php?u=https://i.imgflip.com/1bznz3.jpg&amp;t=Cherie%20Berry%20Wants%20to%20Abolish%20the%20Minimum%20Wage.%20Learn%20more%20at%20cherieberry.info">Share on Facebook</a>
+    <a class="btn btn-sm share-twitter" target="_blank" href="http://twitter.com/home?status=https%3A//i.imgflip.com/1bznz3.jpg%20Cherie%20Berry%20Wants%20to%20Abolish%20the%20Minimum%20Wage%20Learn%20More%20at%20cherieberry.info">Share on Twitter</a>
+<a class="btn btn-sm share-facebook" target="_blank" href="http://facebook.com/sharer.php?u=https://i.imgflip.com/1bznz3.jpg&amp;t=Cherie%20Berry%20Wants%20to%20Abolish%20the%20Minimum%20Wage%20Learn%20More%20at%20cherieberry.info">Share on Facebook</a>
     </div>
   <div class="cbmeme" id="cheatworkers">
    <a href="https://imgflip.com/i/1bzoja"><img class="cbmeme" id="cheatworkers" src="https://i.imgflip.com/1bzoja.jpg" title="Cherie Berry Won't Help Cheated Workers"/></a>
-    </div>
+    <a class="btn btn-sm share-twitter" target="_blank" href="http://twitter.com/home?status=https%3A//i.imgflip.com/1bznz3.jpg%20Cherie%20Berry%20Abandons%Cheated%Workers%20Learn%20More%20at%20cherieberry.info">Share on Twitter</a>
+<a class="btn btn-sm share-facebook" target="_blank" href="http://facebook.com/sharer.php?u=https://i.imgflip.com/1bznz3.jpg&amp;t=Cherie%20Berry%20Cherie%20Berry%20Abandons%Cheated%Workers%20Learn%20More%20at%20cherieberry.info">Share on Facebook</a>    
+</div>
   </div>
       
    
