--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
   <div class="cbmeme" id="cheatworkers">
    <a href="https://imgflip.com/i/1bzoja"><img class="cbmeme" id="cheatworkers" src="https://i.imgflip.com/1bzoja.jpg" title="Cherie Berry Won't Help Cheated Workers"/></a>
     <div align="center"> 
-    <a class="btn btn-sm share-twitter" target="_blank" href="http://twitter.com/home?status=https://i.imgflip.com/1bzoja.jpg%20Cherie%20Berry%20Abandons%Cheated%Workers%20Learn%20More%20at%20cherieberry.info">Share on Twitter</a>
-<a class="btn btn-sm share-facebook" target="_blank" href="http://facebook.com/sharer.php?u=https://i.imgflip.com/1bzoja.jpg&amp;t=Cherie%20Berry%20Cherie%20Berry%20Abandons%Cheated%Workers%20Learn%20More%20at%20cherieberry.info">Share on Facebook</a>    
+    <a class="btn btn-sm share-twitter" target="_blank" href="http://twitter.com/home?status=https://i.imgflip.com/1bzoja.jpg%20Cherie%20Berry%20Abandons%Cheated%Workers.%20Learn%20More%20at%20cherieberry.info%20">Share on Twitter</a>
+<a class="btn btn-sm share-facebook" target="_blank" href="http://facebook.com/sharer.php?u=https://i.imgflip.com/1bzoja.jpg&amp;t=Cherie%20Berry%20Cherie%20Berry%20Abandons%Cheated%Workers.%20Learn%20More%20at%20cherieberry.info">Share on Facebook</a>    
     </div>
     </div>
   </div>
