--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--<div class="site-slogan">Cherie Berry</div>-->
     </div>
   <div class="site-slogan">THE ELEVATOR LADY</div> 
-  <div class="headbg"><img src=""></div>
+  <div class="headbg"><img src="https://github.com/ncnext/cbinfo/blob/gh-pages/img/cbelevatorv2.jpg"></div>
   <div class="site-slogan">WANTS YOUR WAGES IN THE BASEMENT</div>
     
     <h2>Who is the Real Cherie Berry?</h2>
