--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     -->
     <!--<div class="site-slogan">Cherie Berry</div>-->
     </div>
-  <div class="site-slogan" id="cherie">THE ELEVATOR LADY</div> 
-  <div class="headbg"></div>
+   
+  <div class="headbg">
+  <div class="site-slogan" id="berry">THE ELEVATOR LADY</div>
+  </div>
   <div class="site-slogan" id="berry">WANTS YOUR WAGES IN THE BASEMENT</div>
     
     <h2>Who is the Real Cherie Berry?</h2>
