--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <div id="cherie">Cherie</div>
     <div id="berry">Berry</div>
     -->
-    <!--<div class="site-slogan">Cherie Berry</div>-->
+    <!--<div class="site-slogan">Cherie Berry</div>
     </div>
-   
-  <div class="headbg">
-  <div class="site-slogan" id="berry">THE ELEVATOR LADY</div>
+   -->
+  <div>
+  <div class="site-slogan" id="cherie">THE ELEVATOR LADY</div>
   <div class="site-slogan" id="berry">WANTS YOUR WAGES IN THE BASEMENT</div>
   </div>
   
