--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <!--<div class="site-slogan">Cherie Berry</div>
     </div>
    -->
-  <div>
+    <div class="site-title">Cherie Berry</div>
+  <div align="center">
   <div class="site-slogan" id="cherie">THE ELEVATOR LADY</div>
   <div class="site-slogan" id="berry">WANTS YOUR WAGES IN THE BASEMENT</div>
   </div>
