--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     </div>
    -->
     
-  <div align="center">
+  <!--<div align="center">-->
+  <div class="site-slogan" id="berry">DON'T LET</div>
   <div class="site-slogan" id="cherie">THE ELEVATOR LADY</div>
   <div class="site-slogan" id="berry">WANTS YOUR WAGES IN THE BASEMENT</div>
-  </div>
+  <!--</div>-->
   
     
     <h2>Who is the Real Cherie Berry?</h2>
