--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!--<div align="center">-->
   <div class="site-slogan" id="berry">DON'T LET</div>
   <div class="site-slogan" id="cherie">THE ELEVATOR LADY</div>
-  <div class="site-slogan" id="berry">WANTS YOUR WAGES IN THE BASEMENT</div>
+  <div class="site-slogan" id="berry">TAKE YOU FOR A RIDE</div>
   <!--</div>-->
   
     
