--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
    -->
     
   <!--<div align="center">-->
-  <div class="site-slogan" id="berry">DON'T LET</div>
+  <!--<div class="site-slogan" id="berry">DON'T LET</div>-->
   <div class="site-slogan" id="cherie">THE ELEVATOR LADY</div>
-  <div class="site-slogan" id="berry">TAKE YOU FOR A RIDE</div>
+  <div class="site-slogan" id="berry">DON'T LET HER TAKE YOU FOR A RIDE</div>
   <!--</div>-->
   
     
