--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <h2>The Elevator Lady Wants to Keep Your Wages in the Basement</h2>
     <ul>
-     <li>Cherie Berry doesn't believe North Carolina should even <a href="http://aflcionc.org/nc-labor-commissioner-wants-to-abolish-the-minimum-wage/">HAVE a minimum wage</a>!
+     <li>In 2012, Cherie Berry stated that the minimum wage should be <a href="http://aflcionc.org/nc-labor-commissioner-wants-to-abolish-the-minimum-wage/">ABOLISHED</a>.
       </li>
       </ul>
    
