--- a/index.html
+++ b/index.html
@@ -87,32 +87,21 @@
 
    <h2>Tell Cherie Berry That North Carolina Workers Matter</h2>
    <p>Email her at <a href="mailto:commishberry@aol.com">commishberry@aol.com</a> or call her at 828-217-5638.</p>
-   
-    <!--
-   <h2>Share With Your Friends: Cherie #FAILS NC Workers</h2>
-  <div align="center" border="2px black">
-  <div class="cbmeme" id="minimumwage">
-   <a href="https://imgflip.com/i/1bznz3"><img class="cbmeme" id="minimumwage" src="https://i.imgflip.com/1bznz3.jpg" title="Cherie Berry Wants to Abolish Minimum Wage"/></a>
-<div align="center">    
-<a class="btn btn-sm share-twitter" target="_blank" href="http://twitter.com/home?status=https://i.imgflip.com/1bznz3.jpg%20Cherie%20Berry%20Wants%20to%20Abolish%20the%20Minimum%20Wage%20Learn%20More%20at%20cherieberry.info">Share on Twitter</a>
-<a class="btn btn-sm share-facebook" target="_blank" href="http://facebook.com/sharer.php?u=https://i.imgflip.com/1bznz3.jpg&amp;t=Cherie%20Berry%20Wants%20to%20Abolish%20the%20Minimum%20Wage%20Learn%20More%20at%20cherieberry.info">Share on Facebook</a>
-    </div>    
-    </div>
-  <div class="cbmeme" id="cheatworkers">
-   <a href="https://imgflip.com/i/1bzoja"><img class="cbmeme" id="cheatworkers" src="https://i.imgflip.com/1bzoja.jpg" title="Cherie Berry Won't Help Cheated Workers"/></a>
-    <div align="center"> 
-    <a class="btn btn-sm share-twitter" target="_blank" href="http://twitter.com/home?status=https://i.imgflip.com/1bzoja.jpg%20Cherie%20Berry%20Abandons%Cheated%Workers.%20Learn%20More%20at%20cherieberry.info%20">Share on Twitter</a>
-<a class="btn btn-sm share-facebook" target="_blank" href="http://facebook.com/sharer.php?u=https://i.imgflip.com/1bzoja.jpg&amp;t=Cherie%20Berry%20Cherie%20Berry%20Abandons%Cheated%Workers.%20Learn%20More%20at%20cherieberry.info">Share on Facebook</a>    
-    </div>
-    </div>
-  </div>
-    -->
       
-   
    <h3>Disclaimer</h3>
    <p>This site is not affiliated with the campaigns of Cherie Berry or Charles Meeker or any other organzation.</p>
     
     </div><!--end container-->  
   </body>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-11146278-6', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 </html>
